# openmcp-python

./: .gitignore  CLAUDE.md  README.md  example_metadata_endpoint.py  final-plan.md  pyproject.toml  whiteboarding.py
docs/mcp/: EXECSPEC-reading.md
docs/mcp/core/lifecycle/: lifecycle-phases.md
docs/mcp/core/transports/: streamable-http.md
docs/mcp/core/understanding-mcp-servers/: bringing-servers-together.md  core-server-features.md
docs/mcp/spec/schema-reference/: notifications-cancelled.md
docs/openmcp/: EXECSPEC-cleanup.md  EXECSPEC-di.md  EXECSPEC-quality.md  EXECSPEC-sync-async-COMPLETE.md  EXECSPEC-sync-async-finalization.md  EXECSPEC.md  README.md  ambient-registration.md  cancellation.md  completions.md  context.md  cookbook.md  elicitation.md  features.md  getting-started.md  hook-patterns.md  logging.md  notifications.md  pagination.md  performance-quick-start.md  performance.md  ping.md  progress.md  prompts.md  resources.md  result-normalization.md  roots.md  sampling.md  schema-inference.md  subscriptions.md  tools.md  transports.md  versioning.md
docs/openmcp/audits/: server-capabilities.md
docs/openmcp/design/: authorization.md
docs/openmcp/examples/: hello-trip.md
docs/openmcp/manual/: client.md  configuration.md  examples.md  overview.md  security.md  server.md
examples/: cancellation.py  connections_demo.py  dynamic_server.py  progress_logging.py
examples/advanced/: README_LOGGING.md  authorization.py  custom_logging.py  custom_service.py  custom_transport.py  feature_flag_server.py  logging_customization_guide.md  multi_server.py
examples/auth/01_simple/: client.py  server.py
examples/auth/02_as/: client.py  server.py
examples/auth/03_client_credentials/: client.py
examples/auth/04_device_flow/: client.py
examples/auth/05_zero_trust/: client.py  server.py
examples/auth_stub/: server.py
examples/client/: README.md  elicitation_handler.py  full_capabilities.py  roots_config.py  sampling_handler.py
examples/connections/: context_resolver_demo.py
examples/full_demo/: server.py  simple_client.py  simple_server.py  simple_tools.py  whiteboarding.py
examples/hello_trip/: client.py  server.py
examples/prompts/: basic_prompt.py  completion.py  multi_message.py  parameterized.py
examples/resources/: binary_resource.py  dynamic_resource.py  static_resource.py  subscriptions.py  templates.py
examples/tools/: allow_list.py  allow_list_actually.py  basic_tool.py  error_handling.py  mixed_sync_async.py  progress_tool.py  typed_tool.py
schemas/: execution_plan.schema.json
src/openmcp/: __init__.py  _sdk_loader.py  completion.py  context.py  progress.py  prompt.py  resource.py  resource_template.py  tool.py  types.py  versioning.py
src/openmcp/client/: __init__.py  app.py  connection.py  core.py  transports.py
src/openmcp/server/: __init__.py  adapters.py  app.py  authorization.py  connectors.py  core.py  execution_plan.py  notifications.py  pagination.py  resolver.py  result_normalizers.py  subscriptions.py
src/openmcp/server/dependencies/: __init__.py  models.py  solver.py
src/openmcp/server/drivers/: __init__.py  base.py  http_api.py
src/openmcp/server/services/: __init__.py  completions.py  elicitation.py  jwt_validator.py  logging.py  ping.py  prompts.py  protocols.py  resources.py  roots.py  sampling.py  tools.py
src/openmcp/server/transports/: __init__.py  _asgi.py  _starlette.py  asgi.py  base.py  stdio.py  streamable_http.py
src/openmcp/utils/: __init__.py  coro.py  logger.py  schema.py  serializer.py
tests/: __init__.py  conftest.py  helpers.py  test_authorization.py  test_client.py  test_client_connection.py  test_client_transports.py  test_completions.py  test_context.py  test_coro_utils.py  test_elicitation.py  test_integration_subscriptions.py  test_logger_utils.py  test_logging.py  test_ping.py  test_progress_flow.py  test_prompts.py  test_prompts_sync_async.py  test_resource_templates.py  test_resources.py  test_resources_sync_async.py  test_roots_service.py  test_sampling.py  test_schema_utils.py  test_sdk_loader.py  test_serializer.py  test_server_adapters.py  test_server_validation.py  test_session_id.py  test_subscriptions_prune.py  test_tools.py  test_tools_dynamic.py  test_tools_sync_async.py  test_transport_registry.py  test_versioning.py
tests/server/: __init__.py  test_connectors.py  test_context_resolver.py  test_dependencies.py  test_execution_plan.py  test_mcp_metadata.py  test_resolver.py  test_streamable_http_auth.py
tests/server/drivers/: __init__.py  test_http_api_driver.py
tests/server/services/: test_jwt_validator.py
